# zeromq-qemu

./: .gitignore  Makefile  README.md  linker.lds  main.S
arm_guest/: Makefile
arm_guest/src/: entry.c  exceptions.c  exceptions.h  linker.lds  printf.c  printf.h  startup.S  uart.c  uart.h  utils.c  utils.h  zmq.c  zmq.h
host/: CMakeLists.txt  server.c  test_client.c
patch/: qemu_2023-11-29.patch  qemu_2023-12-11.patch
